<resources>
    <string name="app_name">Your weight App</string>
    <string name="bmi_calculator_name">BMI Calculator</string>
    <string name="btn_calculator">BMI Calculator</string>
    <string name="enter_weight">Enter your weight [kg]</string>
    <string name="height_info">Set up your height [m]</string>
    <string name="set_your_height">1.75</string>
    <string name="BMI_Value">BMI:</string>
    <string name="kcal_calculator_name">Kcal Calculator</string>
    <string name="btn_kcal_calculator">Kcal Calculator</string>
    <string name="select_sex_txt">Select your sex:</string>
    <string-array name="sex_spinner">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string name="txt_your_age">Enter your age:</string>
    <string name="txt_your_weight">Enter your weight[kg]:</string>
    <string name="txt_your_height">Enter your height[cm]:</string>
    <string name="txt_kcal">Kcal:</string>
    <string name="btn_recipes">Recipes</string>
    <string name="recipes_name">Recipes</string>
    <string name="btn_backToMainMenu">Back to Main Menu</string>
    <string name="btn_quiz_activity">Quiz</string>
    <string name="quiz_name">Quiz</string>
    <string name="nameOfBtnPreviousQuiz">Preview</string>
    <string name="nameOfBtnNextQuiz">Next</string>
    <string name="nameOfBtnLastQuestion">Main Menu</string>
    <string name="nameOfBtnClearAnswer">Try again</string>
    <string name="errorNotSelectedAnswer">You need to select your answer before u go
        to previous or next question</string>
    <string name="btnChartActivity">Chart</string>
    <string name="chart_name">BMI chart</string>
    <string name="btnChartToMainMenu">Main Menu</string>
</resources>
