<?xml version="1.0" encoding="utf-8"?>
<GridLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".BMICalculatorActivity"
    android:columnCount="2"
    android:useDefaultMargins="true">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:id="@+id/weightEditText"
        android:layout_column="0"
        android:digits="0123456789"
        android:maxLength="6"
        android:ems="10"
        android:layout_columnSpan="2"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/weightTextView"
        android:layout_row="0"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:textAlignment="center"
        android:hint="@string/enter_weight"
        android:layout_gravity="fill_horizontal"
        android:background="@color/weight_background"
        android:padding="@dimen/textview_padding"
        android:elevation="@dimen/elevation"
        tools:ignore="RtlCompat" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:textAlignment="center"
        android:hint="@string/height_info"
        android:padding="@dimen/textview_padding"
        android:background="@color/height_background"
        android:layout_gravity="fill_horizontal"
        tools:ignore="RtlCompat" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/set_your_height"
        android:id="@+id/heightTextView"
        android:layout_gravity="center_vertical|right"/>

    <SeekBar
        android:layout_width="wrap_content"
        android:layout_height="@dimen/seekbar_height"
        android:id="@+id/heightSeekBar"
        android:indeterminate="false"
        android:min="125"
        android:max="250"
        android:progress="175"
        android:layout_gravity="fill_horizontal"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/BMI_Value"
        android:id="@+id/totalLabelTextView"
        android:layout_gravity="right"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/BMITextView"
        android:layout_gravity="fill_horizontal"
        android:background="@color/BMI_background"
        android:gravity="center"
        android:padding="@dimen/textview_padding"
        android:elevation="@dimen/elevation"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:textAlignment="center"
        android:id="@+id/SummaryTextView"
        android:textStyle="bold|italic"
        android:layout_gravity="fill_horizontal"
        tools:ignore="RtlCompat" />

</GridLayout>
